# toy-engine

./: .editorconfig  .gitignore  Cargo.toml  README.md  build.rs
.cargo/: config.toml
.github/workflows/: rust.yml
assets/shaders/: imgui.frag  imgui.frag.spv  imgui.vert  imgui.vert.spv  quad.frag.spv  quad.vert.spv
benches/: quad_batcher.rs
crates/camera/: Cargo.toml
crates/camera/src/: controller.rs  ortho.rs  perspective.rs
crates/core/: Cargo.toml
crates/core/src/: debug.rs  lib.rs
crates/editor/: Cargo.toml
crates/editor/src/: lib.rs  main.rs
crates/engine/: Cargo.toml
crates/engine/src/: engine.rs  frame_counter.rs  lib.rs
crates/input/: Cargo.toml
crates/input/src/: lib.rs
crates/sandbox/: Cargo.toml
crates/sandbox/src/: main.rs
crates/vulkan-imgui/: Cargo.toml  build.rs
crates/vulkan-imgui/src/: lib.rs
crates/vulkan-renderer/: Cargo.toml
crates/vulkan-renderer-2d/: Cargo.toml
crates/vulkan-renderer-2d/benches/: quad_batcher.rs
crates/vulkan-renderer-2d/shaders/: quad.frag  quad.vert
crates/vulkan-renderer-2d/src/: lib.rs
crates/vulkan-renderer/src/: buffer.rs  descriptor.rs  device.rs  image.rs  lib.rs  pipeline.rs  renderer.rs  renderpass.rs  shader.rs  swapchain.rs  texture.rs
src/: component.rs  debug.rs  engine.rs  input.rs  lib.rs  object.rs
src/camera/: controller.rs  mod.rs  ortho.rs  perspective.rs
src/renderer/: mod.rs
src/renderer/backend/: buffer.rs  descriptor.rs  device.rs  image.rs  mod.rs  pipeline.rs  renderer.rs  renderpass.rs  shader.rs  swapchain.rs  texture.rs
src/renderer/frontend/: imgui.rs  mod.rs  renderer.rs
