[package]
name = "toy-engine"
version = "0.1.0"
edition = "2021"
authors = ["alexandre barone <abalexandrebarone@gmail.com>"]

[dependencies]
ash = { version = "0.37.0", default-features = false, features = ["linked", "debug"] }
ash-window = "0.10.0"
cgmath = "0.18.0"
env_logger = "0.10.0"
image = "0.24"
imgui = "0.10.0"
imgui-winit-support = "0.10.0"
log = "0.4.17"
winit = "0.27.2"

[dev-dependencies]
criterion = { version = "0.4.0", features = ["html_reports"] }

[build-dependencies]
shaderc = "0.8.2"

[[bin]]
name = "sandbox"
path = "src/bin/sandbox.rs"

[[bench]]
name = "quad_batcher"
harness = false
