[workspace]
members = ["crates/*"]

[workspace.package]
rust-version = "1.69"
edition = "2021"
license = "MIT"
authors = ["alexandre barone <abalexandrebarone@gmail.com>"]

[profile.dev]
# Disabling debug info speeds up builds a bunch,
# and we don't rely on it for debugging that much.
debug = 0

[workspace.dependencies]
# local crates
camera = { path = "./crates/camera", version = "0.0.0" }
core = { path = "./crates/core", version = "0.0.0" }
editor = { path = "./crates/editor", version = "0.0.0" }
engine = { path = "./crates/engine", version = "0.0.0" }
input = { path = "./crates/input", version = "0.0.0" }
sandbox = { path = "./crates/sandbox", version = "0.0.0" }
vulkan-imgui = { path = "./crates/vulkan-imgui", version = "0.0.0" }
vulkan-renderer = { path = "./crates/vulkan-renderer", version = "0.0.0" }
vulkan-renderer-2d = { path = "./crates/vulkan-renderer-2d", version = "0.0.0" }
# non-local crates
ash = { version = "0.37.0", default-features = false, features = ["linked", "debug"] }
ash-window = "0.10.0"
cgmath = "0.18.0"
image = "0.24"
imgui = "0.10.0"
log = "0.4.17"
winit = "0.27.2"
