[package]
name = "camera"
version = "0.0.0"
description = "TBD"

authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
doctest = false

[dependencies]
cgmath.workspace = true
log.workspace = true
winit.workspace = true
# local-deps
input.workspace = true
