[package]
name = "editor"
version = "0.0.0"
description = "TBD"

authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
cgmath.workspace = true
env_logger = "0.10.0"
imgui.workspace = true
log.workspace = true
winit.workspace = true

# local deps
core.workspace = true
engine.workspace = true
