[package]
name = "vulkan-renderer"
version = "0.0.0"
description = "TBD"

authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
doctest = false

[dependencies]
ash.workspace = true
ash-window.workspace = true
cgmath.workspace = true
image.workspace = true
log.workspace = true
winit.workspace = true
